--- a/home/user-creation-in-paas.html
+++ b/home/user-creation-in-paas.html
@@ -118,7 +118,7 @@
 <li><p>Click <strong>Create</strong>. </p>
 </li>
 </ol>
-<p><img src="images/create-user.png" alt=""></p>
+<p><img src="images/create-user-2.png" alt=""></p>
 <p>This will create a new user in your organization. This new user will be automatically assigned to all GitLab Repositories from within all environments. If you have already a user created, you can click on the user and update the SSH key box with the one created above.</p>
 <blockquote><p><strong>Important!</strong>: It is the Organization Admin&#39;s 
 responsibility to inform the new user about its credentials and set of permissions granted on the portal.</p>
