--- a/home/user-creation-in-paas.html
+++ b/home/user-creation-in-paas.html
@@ -98,22 +98,22 @@
 <li>Click on the  arrows <img src="images/organisation-arrows.png" alt=""> next to the organization arrows. A notification appears, similar to the one above which enables you to select the organization you want to access.</li>
 </ul>
 <p> Note that only the users with the &#39;Admin&#39; permission can create more users. To manage/ see the users please refer to the below.</p>
-<p><img src="images/users-tab.png" alt=""></p>
 <ol>
-<li><p>Go to the menu on the left and then click <strong>Users</strong> tab, as below:</p>
+<li><p>Go to the menu on the left and then click Users tab.</p>
 </li>
-<li><p>To order the users&#39; list hover over the <strong>Name</strong> tab - the users will be listed in an alphabetical order</p>
+<li><p>To order the users&#39; list hover over the Name tab - the users will be listed in an alphabetical order.
+Click on the Status tab to see the status of each user (i.e. the user status can be creating, editing, failed, deleting).</p>
 </li>
-<li><p>Click on the <strong>Status</strong> tab to see the status of each user (i.e. the user status can be <strong>creating, editing, failed, deleting</strong>)</p>
-</li>
-<li><p>Create a new user by clicking the <strong>New user</strong> button on the top-right corner. Enter a email address.  It is important to add a valid email as you might receive communications on it.</p>
+<li><p>Create a new user by clicking the New user button on the top-right corner. Enter a email address.  It is important to add a valid email as you might receive communications on it. </p>
 </li>
 </ol>
 <p><img src="images/create-user.png" alt=""></p>
 <ol>
-<li><p>Enter a user name. At this stage, the platform validates whether the email and user name already exists in the database.</p>
+<li><p>If the email exists in the platform a notification pop-us up which asks you to confirm whether the username associated to that email address should be added to your organisation.</p>
 </li>
-<li><p>If the email and the username pass the first round of validation, then you can define the user&#39;s password, add the SSH Key (optional) and assign a user role to it.</p>
+<li><p>Enter a <em>user name</em>.</p>
+</li>
+<li><p>Define the user&#39;s <em>password</em>, add the <em>SSH Key</em> (optional) and assign a <em>user role</em> to it.</p>
 </li>
 <li><p>Click <strong>Create</strong>. </p>
 </li>
