--- a/home/techguides/deploy-an-update-to-an-existing-environment.html
+++ b/home/techguides/deploy-an-update-to-an-existing-environment.html
@@ -470,7 +470,9 @@ o</p>
 <p>See below an example in which an environment file with the JAVA_OPTS change has been added inside the t24-addons folder:
  <img src="images/java-heap-size.png" alt=""></p>
 <div class="NOTE"><h5>Note</h5><p>Do not leave multiple versions of the same component type in the GIT folder as this would produce undesired results.
-<br>
+If you deploy a non-modelbank database into TCD make sure that the Recover Model in the DB Properties  is set <strong>Simple</strong>:
+<img src="images/db-nonmodel.png" alt=""></p>
+<p><br>
 </br></p>
 </div>
 <h1 id="commit--push-features-to-repository">Commit &amp; Push features to Repository</h1>
